small wrapper gap fix

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -29,4 +29,8 @@ li {
 
   overflow: hidden;
   outline: 1px red solid;
+
+  @media screen and (max-width: 450px) {
+    gap: 150px;
+  }
 }
